2009-01-26  Andrew John Hughes  <ahughes@redhat.com>

	* gnu/testlet/java/lang/String/ConsCharset.java:
	New test for constructor which takes a
	java.nio.charset.Charset as an argument.
	
2009-01-02  Andrew John Hughes  <ahughes@redhat.com>

	* gnu/testlet/java/text/ChoiceFormat/Bad.java:
	New test for bad ChoiceFormats.
	* gnu/testlet/java/text/MessageFormat/format14.java:
	Correct ChoiceFormat used.

2008-12-31  Andrew John Hughes  <ahughes@redhat.com>

	* gnu/testlet/java/util/Calendar/ampm.java:
	Use the localised am/pm strings from DateFormatSymbols
	rather than hardcoding.

2008-11-17  Fabien DUMINY  <fduminy@jnode.org>
    
    * gnu/testlet/runner/Filter.java :
    To allow custom filtering outside of Mauve, 
    externalized code reading the test list + added LineProcessor interface
    Also slightly optimized use of memory by StringBuffer.   

2008-11-14  Fabien DUMINY  <fduminy@jnode.org>
    
    * gnu/testlet/runner/CheckResult.java 
    * gnu/testlet/runner/ClassResult.java 
    * gnu/testlet/runner/HTMLGenerator.java 
    * gnu/testlet/runner/Mauve.java 
    * gnu/testlet/runner/MauveTests.java     Added
    * gnu/testlet/runner/PackageResult.java 
    * gnu/testlet/runner/Result.java         Added
    * gnu/testlet/runner/RunResult.java 
    * gnu/testlet/runner/TestResult.java 
    * gnu/testlet/runner/XMLReportConstants.java  Added 
    * gnu/testlet/runner/XMLReportParser.java     Added
    * gnu/testlet/runner/XMLReportWriter.java     Added
    * gnu/testlet/runner/compare/ClassComparison.java       Added
    * gnu/testlet/runner/compare/Comparison.java            Added
    * gnu/testlet/runner/compare/ComparisonVisitor.java     Added
    * gnu/testlet/runner/compare/ComparisonWriter.java      Added
    * gnu/testlet/runner/compare/EvolutionType.java         Added
    * gnu/testlet/runner/compare/EvolutionTypeVisitor.java  Added
    * gnu/testlet/runner/compare/HTMLComparisonWriter.java  Added